fix publication files shown

--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -119,12 +119,12 @@
                                         </div>
                                     </div>
 
-                                    {% include 'cup/form-image.twig' with { 'entity': publication } %}
-                                    {% include 'cup/form-file.twig' with { 'entity': publication } %}
+                                    {% include 'cup/form-image.twig' with { 'entity': item } %}
+                                    {% include 'cup/form-file.twig' with { 'entity': item } %}
 
                                     <hr>
 
-                                    {% include "cup/form-meta.twig" with { 'entity': publication } %}
+                                    {% include "cup/form-meta.twig" with { 'entity': item } %}
                                 </div>
                             </div>
                         </div>
