fix date create publication

--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -98,7 +98,7 @@
                                             {% include 'cup/form.twig' with {
                                                 'label': 'Date'|locale,
                                                 'type': 'datetime',
-                                                'name': 'Date',
+                                                'name': 'date',
                                                 'args': {
                                                     'value': item.date|df('Y-m-d\\TH:i'),
                                                     'placeholder': '20.01.2019 12:34',
