--- a/src/Template/cup/sidebar.twig
+++ b/src/Template/cup/sidebar.twig
@@ -175,9 +175,7 @@
                                 .removeClass((i, cn) => (cn.match(/\btext-\S+/g) || []).join(' '))
                                 .addClass(color).text(text);
                             $buf.find('small.date').text(
-                                moment
-                                    .tz(task.date, 'YYYY-MM-DD hh:mm:ss', 'utc')
-                                    .format('{{ parameter('common_date_format', 'j-m-Y, H:i')|dfm }}')
+                                moment(task.date)   .format('{{ parameter('common_date_format', 'j-m-Y, H:i')|dfm }}')
                             );
 
                             return $buf;
