--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -154,6 +154,11 @@
             <div class="collapse" id="nav-reference">
                 <ul class="nav nav-collapse">
                     <li>
+                        <a href="/cup/reference/documents">
+                            <span class="sub-item">{{ 'Documents'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="/cup/reference/social-networks">
                             <span class="sub-item">{{ 'Social networks'|locale }}</span>
                         </a>
@@ -216,16 +221,6 @@
                     <li>
                         <a href="/cup/reference/tax-rates">
                             <span class="sub-item">{{ 'Tax rates'|locale }}</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/cup/reference/order-invoice">
-                            <span class="sub-item">{{ 'Invoice template'|locale }}</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/cup/reference/order-dispatch">
-                            <span class="sub-item">{{ 'Dispatch template'|locale }}</span>
                         </a>
                     </li>
                 </ul>
