--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -132,16 +132,10 @@
                                     </div>
                                     <div class="col-6 col-sm-4 text-right">
                                         <form action="/cup/catalog/order/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the order?'|locale }}');">
-                                            <div class="btn-group">
+                                            <div class="btn-group dropdown">
                                                 <a href="/cup/catalog/order/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
                                                     <i class="fas fa-fw fa-edit"></i>
                                                     <span class="d-none d-md-inline-block">{{ 'Change'|locale }}</span>
-                                                </a>
-                                                <a href="/cup/catalog/order/{{ item.uuid }}/invoice" class="btn btn-sm btn-outline-info d-none d-md-inline">
-                                                    <i class="fas fa-file-invoice"></i>
-                                                </a>
-                                                <a href="/cup/catalog/order/{{ item.uuid }}/dispatch" class="btn btn-sm btn-outline-info d-none d-md-inline">
-                                                    <i class="fas fa-dolly"></i>
                                                 </a>
                                                 <button type="submit" class="btn btn-sm btn-danger">
                                                     <i class="fas fa-fw fa-trash-alt"></i>
