--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -43,7 +43,7 @@
                     <div class="card-body">
                         <div class="tab-content">
 
-                            {# Tab: Пользователь #}
+                            {# Tab: Account #}
                             <div class="tab-pane fade {{ item ? '' : 'active show' }}" id="user" role="tabpanel">
                                 <div class="row">
                                     <div class="col-md-6">
@@ -129,7 +129,7 @@
                                 {% include 'cup/form-image.twig' with { 'entity': item, 'multiple': false } %}
                             </div>
 
-                            {# Tab: Контакт #}
+                            {# Tab: Contact #}
                             <div class="tab-pane fade {{ item ? 'active show' : '' }}" id="contact" role="tabpanel">
                                 <div class="row">
                                     <div class="col-12 col-md-6">
