--- a/src/Template/cup/reference/documents/form.twig
+++ b/src/Template/cup/reference/documents/form.twig
@@ -32,13 +32,14 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Group'|locale,
+                                    'label': 'Target'|locale,
                                     'type': 'select',
-                                    'name': 'value[group]',
+                                    'name': 'value[target]',
                                     'args': {
                                         'required': true,
-                                        'option': _(constant('/App/Domain/References/Documents::DOCUMENT_GROUP')),
-                                        'selected': item.value.group
+                                        'option': _(constant('/App/Domain/References/Documents::DOCUMENT_TARGET')),
+                                        'selected': item.value.target,
+                                        'multiple': true
                                     }
                                 } %}
                             </div>
